[Ressource]Renommage du dossier Product en product
- Défaut de nommage dans certains template du nom, d'un dossier dans le dossier des css.

--- a/SmartLiving/templates/category/show.html.twig
+++ b/SmartLiving/templates/category/show.html.twig
@@ -7,7 +7,7 @@
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/account.css') }}">
     {# Use CSS for macro#}
-    <link rel="stylesheet" type="text/css" href=" {{ asset('css/Product/homepage.css')}} ">
+    <link rel="stylesheet" type="text/css" href=" {{ asset('css/product/homepage.css')}} ">
 {% endblock %}
 
 {% block body %}
