--- a/SmartLiving/templates/product/homepage.html.twig
+++ b/SmartLiving/templates/product/homepage.html.twig
@@ -6,7 +6,7 @@
 {% block title %}Accueil{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" type="text/css" href=" {{ asset('css/Product/homepage.css')}} ">
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/product/homepage.css')}}">
 {% endblock %}
 {% block body %}
 <h1 class="mt-5 mb-5 title-h1-midnight-blue">Produits Tendances</h1>
