--- a/SmartLiving/public/css/cart.css
+++ b/SmartLiving/public/css/cart.css
@@ -4,7 +4,6 @@ p,span {
 }
 
 
-
 .cart-primary-text {
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
@@ -29,17 +28,16 @@ p,span {
 }
 
 .cart-button-validate {
-    width: 90%;
-    height: 72px;
+    width: 80%;
     background: #BBE4E4 0% 0% no-repeat padding-box;
     border-radius: 10px;
-    margin-bottom: 5%;
+
 }
 
 .cart-button-update-quantity {
 
     background-color: #F1D23D;
-    width: 90%;
+
 }
 
 .cart-image-product {
@@ -51,16 +49,9 @@ p,span {
 
 
 .cart-input-quantity {
-    width: 90%;
-    height: 44px;
+    width: 100px;
+    height: 30px;
 }
-
-
-
-
-
-
-
 
 .cart-price-product {
     text-align: left;
@@ -81,3 +72,25 @@ p,span {
     font-size: 40px;
 }
 
+
+@media only screen and (max-width: 992px) {
+    .cart-input-quantity {
+        height: 30px;
+        width: 50px;
+    }
+
+    .cart-button-update-quantity {
+        height: 30px;
+        width: max-content;
+    }
+
+    .cart-main-products {
+        border: 3px solid #B1E6E5;
+        border-radius: 10px;
+        opacity: 1;
+    }
+
+    .cart-frame-total {
+        border: none;
+    }
+}
