--- a/SmartLiving/templates/cart/index.html.twig
+++ b/SmartLiving/templates/cart/index.html.twig
@@ -8,95 +8,56 @@
 {% endblock %}
 
 {% block body %}
-     {% if is_mobile() == true %}
-
-         <div class="cart-main">
-            <p class="cart-primary-text text-center">Mon Panier</p>
-            <div class="cart-frame-total">
-                <div class="col-12">
-                    <div class="text-center">
-                        <p class="cart-primary-text">Total HT: <span class="cart-sum-price">{{ sum }} €</span></p>
-                        <button type="button" class="btn btn-lg cart-button-validate">Valider le panier</button>
-                    </div>
-                </div>
-                {% if items | length > 0 %}
-                    {% for item in items %}
-                        <div class="row">
-                            <div class="col-4 justify-content-center">
-                                <img class="cart-image-product" src={{ asset('images/products/ps4-mobile-promo.png') }} alt="">
-                            </div>
-                            <div class="col-8">
+    <div class="cart-main">
+        <p class="cart-primary-text text-center">Mon Panier</p>
+        <div class="row cart-main-products">
+            <div class="col-lg col-12">
+            {% if items | length > 0 %}
+                {% for item in items %}
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <img class="cart-image-product" src={{ asset(item.product.photo) }} alt="">
+                        </div>
+                        <div class="col-auto col-lg row">
+                            <div class="col-auto col-lg">
                                 <p class="cart-text">{{ item.product.title }}<p>
-                                <form method ="post" class="form-inline" action="{{ path("cart_update") }}">
-                                    <div class="form-group">
-                                        <input type="number" class="form-control cart-input-quantity text-center" name="id" min=0 hidden value="{{ item.product.id }}">
-                                    </div>
-                                    <div class="row">
-                                        <label for="quantity_{{ item.product.id }}" class="cart-text col-12">Quantité</label>
-                                        <input type="number" class="form-control cart-input-quantity text-center col-6" id="quantity_{{ item.product.id }}" name="quantity_{{ item.product.id }}" min=0 value="{{ item.quantity }}">
-
-                                        <button type="submit" class="btn btn-sm cart-button-update-quantity text-center col-6">Mise a jour</button>
+                                {# Responsive mobile #}
+                                <form class="d-block d-lg-none form_quantity" action="{{ path("cart_update") }}" method ="POST" >
+                                    <input type="number" name="id" min=0 hidden value="{{ item.product.id }}">
+                                    <div class="form-row">
+                                        <div class="col-auto">
+                                            <label for="quantity_{{ item.product.id }}" class="cart-text form-label">Quantité</label>
+                                        </div>
+                                        <div class="col-auto">
+                                            <input type="number" class="form-control cart-input-quantity text-center px-0" id="quantity_{{ item.product.id }}" name="quantity_{{ item.product.id }}" min=0 value="{{ item.quantity }}">
+                                        </div>
+                                        <div class="col-auto">
+                                            <button type="submit" class="btn btn-sm cart-button-update-quantity px-1"><img src="{{ asset('images/icons/update.svg') }}"></button>
+                                        </div>
                                     </div>
                                 </form>
                                 <p class="cart-price-product">{{ item.product.unitPrice }} €</p>
                             </div>
+                            {# Responsive desktop #}
+                            <form class="d-lg-block d-none form_quantity col-auto" action="{{ path("cart_update") }}" method ="POST">
+                                <input type="number" name="id" min=0 hidden value="{{ item.product.id }}">
+                                <label for="quantity_{{ item.product.id }}" class="cart-text col-12 my-1 pl-0">Quantité</label>
+                                <input type="number" class="form-control cart-input-quantity text-center col-12 my-2 px-0" id="quantity_{{ item.product.id }}" name="quantity_{{ item.product.id }}" min=0 value="{{ item.quantity }}">
+                                <button type="submit" class="btn btn-sm cart-button-update-quantity text-center cart-send col-12 my-1">Mise a jour</button>
+                            </form>
                         </div>
-                        <hr class="cart-color-hr">
-                    {% endfor %}
-                {% else %}
-                    <p>Il y a rien !</p>
-                {% endif %}
-                </div>
-
-            </div>
-        </div>
-
-
-    {% else %}
-
-        <div class="cart-main">
-            <p class="cart-primary-text text-center">Mon Panier</p>
-            <div class="row">
-                <div class="col-8">
-                {% if items | length > 0 %}
-                    {% for item in items %}
-                        <div class="row">
-                            <div class="col-2 justify-content-center">
-                                <img class="cart-image-product" src={{ asset(item.product.photo) }} alt="">
-                            </div>
-                            <div class="col-8">
-                                <p class="cart-text">{{ item.product.title }}<p>
-                                <p class="cart-price-product">{{ item.product.unitPrice }} €</p>
-                            </div>
-                            <div class="col-2">
-                                <form method ="post" class="form_quantity" action="{{ path("cart_update") }}">
-                                    <div class="form-group">
-                                        <input type="number" class="form-control cart-input-quantity text-center" name="id" min=0 hidden value="{{ item.product.id }}">
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <label for="quantity_{{ item.product.id }}" class="cart-text">Quantité</label>
-                                        <input type="number" class="form-control cart-input-quantity text-center" id="quantity_{{ item.product.id }}" name="quantity_{{ item.product.id }}" min=0 value="{{ item.quantity }}">
-                                    </div>
-                                    <button type="submit" class="btn btn-sm cart-button-update-quantity text-center cart-send">Mise a jour</button>
-                                </form>
-                            </div>
-                        </div>
-                        <hr class="cart-color-hr">
-                    {% endfor %}
-                {% else %}
-                    <p>Il y a rien !</p>
-                {% endif %}
-                </div>
-                <div class="col-4">
-                    <div class="cart-frame-total text-center">
-                        <p class="cart-primary-text">Total HT: <span class="cart-sum-price">{{ sum }} €</span></p>
-                        <a type="button" class="btn btn-lg cart-button-validate" href="{{ path("cart_send") }}">Valider le panier</a>
                     </div>
-
-                </div>
+                    <hr class="cart-color-hr">
+                {% endfor %}
+            {% else %}
+                <p>Aucun produit</p>
+            {% endif %}
+        </div>
+        <div class="col-lg-auto col-12 order-lg-last order-first">
+            <div class="cart-frame-total text-center px-4 py-3">
+                <p class="cart-primary-text">Total HT: <span class="cart-sum-price ml-2">{{ sum }} €</span></p>
+                <a type="button" class="btn btn-lg cart-button-validate p-4" href="{{ is_granted('ROLE_USER') ? path("cart_send") : path("app_login") }}">Valider le panier</a>
             </div>
         </div>
-
-    {% endif %}
+    </div>
 {% endblock %}
